   - bug 1044 - Seconds (1e-9) creates Time that is not IsPositive ()
   - bug 1056 - CSMA: padding not handled correctly for LLC encapsulation
   - bug 1058 - documentation help to avoid InternetStackHelper pitfall
   - bug 1054 - ipv6 InternetStackHelper EnablePcapIpv6All() broken
   - bug 1042 - AODV RERR implosion (missing RERR_RATELIMIT) 

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.10
===========

Availability
------------
This release is available from: 
http://www.nsnam.org/releases/ns-allinone-3.10.tar.bz2

Supported platforms
-------------------
ns-3.10 has been tested on the following platforms.  Not all features are
available on all platforms; check the Installation page on the project wiki.

- Linux i686 Ubuntu 10.10
  - g++-4.4.5
- Linux x86_64 Ubuntu 8.04.4
  - g++-3.4.6, g++-4.2.4
- Linux x86_64 Fedora Core 12
  - g++-4.4.4
- Linux x86_64 Fedora Core 10
  - g++-3.4.6, 4.0.4, 4.1.2, 4.2.4, 4.3.4, 4.4.0
- OS X Snow Leopard
  - g++-4.2.1 
- OS X powerpc Leopard 
  - g++-4.0, g++-4.2

New user-visible features
-------------------------

   - NS-3 PyViz, a live simulation visualizer, has been added.  The 
     visualizer interacts with a running simulation, such that it uses no
     trace files. It can be most useful for debugging purposes, i.e. to
     figure out if mobility models are what you expect, where packets are
     being dropped, etc. There is also a builtin interactive python console
     that can be used to debug the state of the running objects. Although
     it is mostly written in Python, it works both with Python and pure C++
     simulations.

   - Wi-Fi MAC high classes have been reorganised in attempt to
     consolidate shared functionality into a single class. This new
     class is RegularWifiMac, and it derives from the abstract
     WifiMac, and is parent of AdhocWifiMac, StaWifiMac, ApWifiMac,